Updating windows samples

--- a/Samples/Salesforce.Sample.Container/Salesforce.Sample.Container.csproj
+++ b/Samples/Salesforce.Sample.Container/Salesforce.Sample.Container.csproj
@@ -91,10 +91,12 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SalesforceMobileSDK-Windows\SalesforceSDK\Hybrid\Logging\Logger.cs">
+      <Link>Logging\Logger.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Logging\Logger.cs" />
     <Compile Include="pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
