--- a/Samples/Salesforce.Sample.SmartSyncExplorer/Salesforce.Sample.SmartSyncExplorer.csproj
+++ b/Samples/Salesforce.Sample.SmartSyncExplorer/Salesforce.Sample.SmartSyncExplorer.csproj
@@ -91,7 +91,7 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\salesforcemobilesdk-windows\salesforcesdk\hybrid\logging\Logger.cs">
+    <Compile Include="..\..\SalesforceMobileSDK-Windows\SalesforceSDK\Hybrid\Logging\Logger.cs">
       <Link>Logging\Logger.cs</Link>
     </Compile>
     <Compile Include="App.xaml.cs">
@@ -195,7 +195,6 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
