--- a/Samples/Salesforce.Sample.RestExplorer/Salesforce.Sample.RestExplorer.csproj
+++ b/Samples/Salesforce.Sample.RestExplorer/Salesforce.Sample.RestExplorer.csproj
@@ -115,8 +115,12 @@
     <None Include="Salesforce.Sample.RestExplorer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Logo.png" />
-    <Content Include="Assets\SmallLogo.png" />
+    <Content Include="Assets\SmallLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\Logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\SplashScreen.scale-180.png" />
     <Content Include="Assets\Square150x150Logo.scale-100.png" />
     <Content Include="Properties\Default.rd.xml" />
