Hybrid Sample App

--- a/Samples/Salesforce.Sample.SmartSyncExplorer/Salesforce.Sample.SmartSyncExplorer.csproj
+++ b/Samples/Salesforce.Sample.SmartSyncExplorer/Salesforce.Sample.SmartSyncExplorer.csproj
@@ -181,8 +181,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="SQLite.UAP.2015, Version=3.9.1">
-      <Name>SQLite for Universal App Platform</Name>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.12.2">
+      <Name>SQLite for Universal Windows Platform</Name>
     </SDKReference>
     <SDKReference Include="WindowsDesktop, Version=10.0.10240.0">
       <Name>Windows Desktop Extensions for the UWP</Name>
