--- a/Samples/Salesforce.Sample.RestExplorer/project.json
+++ b/Samples/Salesforce.Sample.RestExplorer/project.json
@@ -6,7 +6,7 @@
     "Microsoft.NETCore": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Newtonsoft.Json": "7.0.1",
-    "SQLitePCL": "3.8.7.2"
+    "PCLStorage": "1.0.2"
   },
   "frameworks": {
     "uap10.0": {}
