--- a/Samples/Salesforce.Sample.SmartSyncExplorer/project.json
+++ b/Samples/Salesforce.Sample.SmartSyncExplorer/project.json
@@ -3,6 +3,7 @@
     "Microsoft.NETCore": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Newtonsoft.Json": "7.0.1",
+    "PCLStorage": "1.0.2",
     "SQLitePCL": "3.8.7.2"
   },
   "frameworks": {
