--- a/Samples/Salesforce.Sample.RestExplorer/project.json
+++ b/Samples/Salesforce.Sample.RestExplorer/project.json
@@ -5,8 +5,7 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Newtonsoft.Json": "7.0.1",
-    "SQLitePCL": "3.8.7.2"
+    "Newtonsoft.Json": "7.0.1"
   },
   "frameworks": {
     "uap10.0": {}
